Added change password popup loaded externally

--- a/loginPopup.html
+++ b/loginPopup.html
@@ -1,4 +1,4 @@
-<div class="loginMain">
+<div class="popupMain">
     <div class="textFieldLabeled">
         <label class="textLabel" >Username</label>
         <input id="usernameInput" type="text" class="textInput">
