Added backend for add new user popup

--- a/html/popups/addNewUser.html
+++ b/html/popups/addNewUser.html
@@ -5,7 +5,7 @@
     </div>
     <div class="textFieldLabeled">
         <label class="textLabel" >Role</label>
-        <select id class="textInput dropDown">
+        <select id="roleSelect" class="textInput dropDown">
             <option value="operator">Operator</option>
             <option value="admin">Admin</option>
         </select>
