Corrected back bar styling

--- a/html/popups/backBar.html
+++ b/html/popups/backBar.html
@@ -2,7 +2,9 @@
     <div id="backButton">
         <img src = "../../src/back.svg" alt="backButton"/>
     </div>
-    <div class="textFieldLabeled">
-        <label id="pageName" class="textLabel" ></label>
+    <div>
+        <div class="title">       
+            <label id="pageName"></label>
+        </div>
     </div>
 </div>
