--- a/html/popups/backBar.html
+++ b/html/popups/backBar.html
@@ -1,6 +1,6 @@
 <div class="backBarMain">
     <div id="backButton">
-        <img src = "../../src/back.svg" alt="backButton"/>
+        <img style="height: 40%;" src = "../../src/back.svg" alt="backButton"/>
     </div>
     <div>
         <div class="title">       
