Added white back arrow and fixed its positioning

--- a/html/popups/backBar.html
+++ b/html/popups/backBar.html
@@ -1,6 +1,6 @@
 <div class="backBarMain">
     <div id="backButton">
-        <img style="height: 40%;" src = "../../src/back.svg" alt="backButton"/>
+        <img id="backArrow" style="height: 37%;" src = "../../src/back_white.svg" alt="backButton"/>
     </div>
     <div>
         <div class="title">       
