Corrected unit name positioning and introduced minor fixes to buttons styling

--- a/html/popups/loginPopup.html
+++ b/html/popups/loginPopup.html
@@ -7,5 +7,5 @@
         <label class="textLabel" >Password</label>
         <input id="passwordInput" type="password" class="textInput">
     </div>
-    <button id="loginButton" class="button loginButton">Log In</button>
+    <button id="loginButton" class="commonButton loginButton">Log In</button>
 </div>
