Fixed button classes in html files

--- a/html/popups/addNewUser.html
+++ b/html/popups/addNewUser.html
@@ -18,5 +18,5 @@
         <label class="textLabel" >Confirm Password</label>
         <input id="confirmPassword" type="password" class="textInput">
     </div>
-    <button id="addUserButton" class="button loginButton">Create</button>
+    <button id="addUserButton" class="commonButton loginButton">Create</button>
 </div>
