--- a/html/popups/changePasswordPopup.html
+++ b/html/popups/changePasswordPopup.html
@@ -15,5 +15,5 @@
         <label class="textLabel" >Confirm Password</label>
         <input id="confirmPassword" type="password" class="textInput">
     </div>
-    <button id="changePassButton" class="button loginButton">Change Password</button>
+    <button id="changePassButton" class="commonButton loginButton">Change Password</button>
 </div>
